--- a/.gitattributes
+++ b/.gitattributes
@@ -5,115 +5,179 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz Vetcho</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+    <title>Questionnaire</title>
     <style>
-        body { font-family: Arial, sans-serif; margin: 20px; }
-        .container { max-width: 600px; margin: auto; }
-        label, select, input { display: block; margin-top: 10px; }
-        .timer { font-size: 20px; font-weight: bold; }
+        body {
+            font-family: Arial, sans-serif;
+        }
+        .timer {
+            font-size: 1.5em;
+            font-weight: bold;
+        }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h2>Quiz Vetcho</h2>
-        <p class="timer" id="timer">Temps restant : 10:00</p>
-        <form id="quizForm">
-            <label>Nom et Prénom : <input type="text" id="nomPrenom" required></label>
-            <label>Date de naissance : <input type="date" id="dob" required></label>
-            <label>Profession : <input type="text" id="profession" required></label>
-            <label>1. Nombre de dents d’un adulte : <input type="number" id="q1"></label>
-            <label>2. Capitale du Burkina Faso : <input type="text" id="q2"></label>
-            <label>3. Capitale régionale du Centre-nord : 
-                <select id="q3">
-                    <option value="">--Choisir--</option>
-                    <option value="Léo">Léo</option>
-                    <option value="Réo">Réo</option>
-                    <option value="Sapouy">Sapouy</option>
-                    <option value="Koudougou">Koudougou</option>
-                </select>
-            </label>
-            <label>4. Capitale de la Russie : Moscou
-                <input type="checkbox" id="q4">
-            </label>
-            <label>5. Capitale du Sénégal : <input type="text" id="q5"></label>
-            <label>6. Couleur de la pomme : 
-                <select id="q6">
-                    <option value="">--Choisir--</option>
-                    <option value="Jaune">Jaune</option>
-                    <option value="Rouge">Rouge</option>
-                    <option value="Vert">Vert</option>
-                    <option value="Bleu">Bleu</option>
-                    <option value="Noir">Noir</option>
-                </select>
-            </label>
-            <label>7. Nom du concepteur de l’application : <input type="text" id="q7"></label>
-            <label>8. Date de l’indépendance du Burkina Faso : <input type="number" id="q8"></label>
-            <label>9. Capitale de l’Italie : 
-                <select id="q9">
-                    <option value="">--Choisir--</option>
-                    <option value="Berlin">Berlin</option>
-                    <option value="Rome">Rome</option>
-                    <option value="Paris">Paris</option>
-                    <option value="Rabat">Rabat</option>
-                </select>
-            </label>
-            <label>10. Chiffre après 16 : <input type="number" id="q10"></label>
-            <button type="submit">Valider</button>
-        </form>
-    </div>
+    <h1>Questionnaire</h1>
+    <div class="timer" id="timer">10:00</div>
+    <form id="quizForm">
+        <label for="nom">Nom:</label>
+        <input type="text" id="nom" name="nom" required><br><br>
+
+        <label for="prenom">Prénom:</label>
+        <input type="text" id="prenom" name="prenom" required><br><br>
+
+        <label for="dateNaissance">Date de naissance:</label>
+        <input type="date" id="dateNaissance" name="dateNaissance" required><br><br>
+
+        <label for="profession">Profession:</label>
+        <input type="text" id="profession" name="profession" required><br><br>
+
+        <h2>Questions</h2>
+
+        <label for="q1">1. Le nombre de dents d’un adulte:</label>
+        <input type="number" id="q1" name="q1" required><br><br>
+
+        <label for="q2">2. La capitale du Burkina Faso:</label>
+        <input type="text" id="q2" name="q2" required><br><br>
+
+        <label for="q3">3. La capitale régionale du Centre-nord:</label>
+        <select id="q3" name="q3" required>
+            <option value="Léo">Léo</option>
+            <option value="Réo">Réo</option>
+            <option value="Sapouy">Sapouy</option>
+            <option value="Koudougou">Koudougou</option>
+        </select><br><br>
+
+        <label for="q4">4. La capitale de la Russie est Moscou:</label>
+        <input type="checkbox" id="q4" name="q4" value="Vrai"> Vrai<br><br>
+
+        <label for="q5">5. La capitale du Sénégal:</label>
+        <input type="text" id="q5" name="q5" required><br><br>
+
+        <label for="q6">6. La couleur de la pomme:</label>
+        <select id="q6" name="q6" required>
+            <option value="jaune">Jaune</option>
+            <option value="rouge">Rouge</option>
+            <option value="vert">Vert</option>
+            <option value="bleu">Bleu</option>
+            <option value="noir">Noir</option>
+        </select><br><br>
+
+        <label for="q7">7. Le nom du concepteur de l’application:</label>
+        <input type="text" id="q7" name="q7" required><br><br>
+
+        <label for="q8">8. La Date de l’indépendance du Burkina Faso:</label>
+        <input type="number" id="q8" name="q8" required><br><br>
+
+        <label for="q9">9. La capitale de l’Italie:</label>
+        <select id="q9" name="q9" required>
+            <option value="Berlin">Berlin</option>
+            <option value="Rome">Rome</option>
+            <option value="Paris">Paris</option>
+            <option value="Rabat">Rabat</option>
+        </select><br><br>
+
+        <label for="q10">10. Le chiffre après 16:</label>
+        <input type="number" id="q10" name="q10" required><br><br>
+
+        <button type="submit">Valider</button>
+        <button type="button" onclick="resetForm()">Nouvel enregistrement</button>
+    </form>
 
     <script>
-        let timeLeft = 600;
-        const timerElement = document.getElementById("timer");
+        let timeLeft = 600; // 10 minutes en secondes
+        let timerInterval;
 
-        function updateTimer() {
-            let minutes = Math.floor(timeLeft / 60);
-            let seconds = timeLeft % 60;
-            timerElement.textContent = `Temps restant : ${minutes}:${seconds < 10 ? '0' : ''}${seconds}`;
-            if (timeLeft > 0) {
+        function startTimer() {
+            timerInterval = setInterval(() => {
                 timeLeft--;
-                setTimeout(updateTimer, 1000);
+                const minutes = Math.floor(timeLeft / 60);
+                const seconds = timeLeft % 60;
+                document.getElementById('timer').textContent = `${minutes}:${seconds < 10 ? '0' : ''}${seconds}`;
+
+                if (timeLeft <= 0) {
+                    clearInterval(timerInterval);
+                    alert("Temps écoulé !");
+                    submitForm();
+                }
+            }, 1000);
+        }
+
+        function submitForm() {
+            clearInterval(timerInterval);
+            const form = document.getElementById('quizForm');
+            const answers = {
+                nom: form.nom.value,
+                prenom: form.prenom.value,
+                dateNaissance: form.dateNaissance.value,
+                profession: form.profession.value,
+                q1: parseInt(form.q1.value),
+                q2: form.q2.value.toLowerCase(),
+                q3: form.q3.value,
+                q4: form.q4.checked ? 'Vrai' : 'Faux',
+                q5: form.q5.value.toLowerCase(),
+                q6: form.q6.value,
+                q7: form.q7.value.toLowerCase(),
+                q8: parseInt(form.q8.value),
+                q9: form.q9.value,
+                q10: parseInt(form.q10.value)
+            };
+
+            const correctAnswers = {
+                q1: 32,
+                q2: 'ouagadougou',
+                q3: 'Koudougou',
+                q4: 'Vrai',
+                q5: 'dakar',
+                q6: 'vert',
+                q7: 'hervé',
+                q8: 1960,
+                q9: 'Rome',
+                q10: 17
+            };
+
+            let score = 0;
+            for (let key in answers) {
+                if (answers[key] === correctAnswers[key]) {
+                    score++;
+                }
+            }
+
+            if (confirm(`Votre score est de ${score}/10. Voulez-vous enregistrer les résultats ?`)) {
+                exportToExcel(answers, score);
+                resetForm();
             } else {
-                alert("Temps écoulé ! Le quiz est soumis automatiquement.");
-                document.getElementById("quizForm").dispatchEvent(new Event("submit"));
+                resetForm();
             }
         }
-        updateTimer();
 
-        document.getElementById("quizForm").addEventListener("submit", function(event) {
+        function exportToExcel(answers, score) {
+            const data = [
+                ['Nom', 'Prénom', 'Date de Naissance', 'Profession', 'Score', 'Q1', 'Q2', 'Q3', 'Q4', 'Q5', 'Q6', 'Q7', 'Q8', 'Q9', 'Q10'],
+                [answers.nom, answers.prenom, answers.dateNaissance, answers.profession, score, answers.q1, answers.q2, answers.q3, answers.q4, answers.q5, answers.q6, answers.q7, answers.q8, answers.q9, answers.q10]
+            ];
+
+            const csvContent = "data:text/csv;charset=utf-8," + data.map(e => e.join(",")).join("\n");
+            const encodedUri = encodeURI(csvContent);
+            const link = document.createElement("a");
+            link.setAttribute("href", encodedUri);
+            link.setAttribute("download", "Quiz_vetcho.csv");
+            document.body.appendChild(link);
+            link.click();
+        }
+
+        function resetForm() {
+            document.getElementById('quizForm').reset();
+            timeLeft = 600;
+            startTimer();
+        }
+
+        document.getElementById('quizForm').addEventListener('submit', function(event) {
             event.preventDefault();
-            let confirmation = confirm("Voulez-vous soumettre vos réponses ?");
-            if (!confirmation) return;
-            
-            const correctAnswers = {
-                q1: "32", q2: "Ouagadougou", q3: "Koudougou", q4: true,
-                q5: "Dakar", q6: "Vert", q7: "Hervé", q8: "1960", q9: "Rome", q10: "17"
-            };
-            let score = 0;
-            
-            Object.keys(correctAnswers).forEach(id => {
-                let answer = document.getElementById(id);
-                let userValue = answer.type === "checkbox" ? answer.checked : answer.value.trim().toLowerCase();
-                let correctValue = typeof correctAnswers[id] === "boolean" ? correctAnswers[id] : correctAnswers[id].toLowerCase();
-                if (userValue == correctValue) score++;
-            });
-            
-            let nomPrenom = document.getElementById("nomPrenom").value;
-            let dob = document.getElementById("dob").value;
-            let profession = document.getElementById("profession").value;
-            
-            let data = [["Nom et Prénom", "Date de naissance", "Profession", "Score"], [nomPrenom, dob, profession, score]];
-            let ws = XLSX.utils.aoa_to_sheet(data);
-            let wb = XLSX.utils.book_new();
-            XLSX.utils.book_append_sheet(wb, ws, "Résultats");
-            XLSX.writeFile(wb, "C:/Users/Public/Desktop/Quiz_vetcho.xlsx");
-            
-            alert(`Votre score est de ${score}/10`);
-            let newEntry = confirm("Voulez-vous faire un nouvel enregistrement ?");
-            if (newEntry) document.getElementById("quizForm").reset();
-            else window.close();
+            submitForm();
         });
+
+        startTimer();
     </script>
 </body>
 </html>
